kubernetes/api-deployments/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth-deploy
  labels:
    app: api-auth-app
    group: utopia
    api: auth
spec:
  selector:
    matchLabels:
      app: api-auth-app
  replicas: $EKS_REPLICA_COUNT
  template:
    metadata:
      labels:
        app: api-auth-app
        group: utopia
        api: auth
    spec:
      containers:
        - name: api-auth-app
          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION_ID.amazonaws.com/am-auth-api:$AUTH_API_LATEST
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "$EKS_CONTAINER_CPU_LIMIT"
              memory: "$EKS_CONTAINER_MEM_LIMIT"
            requests:
              cpu: "$EKS_CONTAINER_CPU_REQUEST"
              memory: "$EKS_CONTAINER_MEM_REQUEST"
          ports:
            - containerPort: 8443
          readinessProbe:
            httpGet:
              path: /api/v1/login/ready
              port: 8443
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-auth-service
  labels:
    api: auth
    group: utopia
spec:
  ports:
    - protocol: TCP
      port: 8443
      name: http
  selector:
    app: api-auth-app
