kubernetes/api-deployments/bookings-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-bookings-deploy
  labels:
    app: api-bookings-app
    group: utopia
    api: bookings
spec:
  selector:
    matchLabels:
      app: api-bookings-app
  replicas: $EKS_REPLICA_COUNT
  template:
    metadata:
      labels:
        app: api-bookings-app
        group: utopia
        api: bookings
    spec:
      containers:
        - name: api-bookings-app
          image: $REPO_LOCATION/am-bookings-api:$BOOKINGS_API_LATEST
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "$EKS_CONTAINER_CPU_LIMIT"
              memory: "$EKS_CONTAINER_MEM_LIMIT"
            requests:
              cpu: "$EKS_CONTAINER_CPU_REQUEST"
              memory: "$EKS_CONTAINER_MEM_REQUEST"
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /api/v1/bookings/ready
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-bookings-service
  labels:
    api: bookings
    group: utopia
spec:
  ports:
    - protocol: TCP
      port: 8082
      name: http
  selector:
    app: api-bookings-app
