kubernetes/api-deployments/flights-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-flights-deploy
  labels:
    app: api-flights-app
    group: utopia
    api: flights
spec:
  selector:
    matchLabels:
      app: api-flights-app
  replicas: $EKS_REPLICA_COUNT
  template:
    metadata:
      labels:
        app: api-flights-app
        group: utopia
        api: flights
    spec:
      containers:
        - name: api-flights-app
          image: $REPO_LOCATION/am-flights-api:$FLIGHTS_API_LATEST
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "$EKS_CONTAINER_CPU_LIMIT"
              memory: "$EKS_CONTAINER_MEM_LIMIT"
            requests:
              cpu: "$EKS_CONTAINER_CPU_REQUEST"
              memory: "$EKS_CONTAINER_MEM_REQUEST"
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/v1/flights/ready
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-flights-service
  labels:
    api: flights
    group: utopia
spec:
  ports:
    - protocol: TCP
      port: 8081
      name: http
  selector:
    app: api-flights-app
