kubernetes/api-deployments/users-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-users-deploy
  labels:
    app: api-users-app
    group: utopia
    api: users
spec:
  selector:
    matchLabels:
      app: api-users-app
  replicas: $EKS_REPLICA_COUNT
  template:
    metadata:
      labels:
        app: api-users-app
        group: utopia
        api: users
    spec:
      containers:
        - name: api-users-app
          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION_ID.amazonaws.com/am-users-api:$USERS_API_LATEST
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "$EKS_CONTAINER_CPU_LIMIT"
              memory: "$EKS_CONTAINER_MEM_LIMIT"
            requests:
              cpu: "$EKS_CONTAINER_CPU_REQUEST"
              memory: "$EKS_CONTAINER_MEM_REQUEST"
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /api/v1/users/ready
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-users-service
  labels:
    api: users
    group: utopia
spec:
  ports:
    - protocol: TCP
      port: 8083
      name: http
  selector:
    app: api-users-app
